fixed wrong font for widget sidebar

--- a/site/web/app/themes/IH/resources/styles/app.scss
+++ b/site/web/app/themes/IH/resources/styles/app.scss
@@ -91,6 +91,7 @@ h4,
 .excerpt,
 .recent-posts li a,
 .categories,
+.postslinks,
 .p-author,
 .heading-category,
 .dt-published {
